# saorsa-webrtc

./: CHANGELOG.md  Cargo.toml  OBSERVABILITY_TRACING_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PROJECT_COMPLETION_REPORT.md  QUIC_IMPLEMENTATION_SUMMARY.md  README.md  code-review-2026-01-25.md
.github/workflows/: ci.yml  release.yml
.planning/: CODEX-REVIEW-REPORT.md  CODEX_REVIEW_MILESTONE_1.md  COMPLETION_SUMMARY.md  MILESTONE_1_FIXES_SUMMARY.md  PHASE-4.3-COMPLETION.md  PLAN-phase-1.1.md  PLAN-phase-1.2.md  PLAN-phase-1.3.md  PLAN-phase-2.1.md  PLAN-phase-2.2.md  PLAN-phase-2.3.md  PLAN-phase-3.1.md  PLAN-phase-3.2.md  PLAN-phase-3.3.md  PLAN-phase-4.1.md  PLAN-phase-4.2.md  PLAN-phase-4.3.md  PLAN-phase-4.4.md  ROADMAP.md  STATE.json  STATE.md  progress.md
.planning/reviews/: FINAL-REVIEW-Task-2-Phase-3.1.md  REVIEW-Task-2-Phase-3.1.md  codex-phase-3.1-20260125.md  codex-phase-4.3-review-20260125.md  phase-4.1-review-20260125.md  phase-4.2-review-20260125-183000.md  phase-4.3-task1-review-20260125-161320.md  review-20260125-180500.md  review-phase-3.1-20260125-135734.md  review-phase-3.2-20260125.md  review-phase-3.3-20260125.md
.planning/specs/: webrtc-usage-audit.md
docs/: MIGRATION_GUIDE.md  PRODUCTION_READINESS_FIXES.md  QUIC_DATA_PATH.md  QUIC_DATA_PATH_COMPLETE.md  STREAM_MULTIPLEXING.md
saorsa-webrtc-cli/: Cargo.toml
saorsa-webrtc-cli/src/: main.rs  terminal_ui.rs  terminal_ui_tests.rs
saorsa-webrtc-codecs/: Cargo.toml
saorsa-webrtc-codecs/src/: lib.rs  openh264.rs  opus.rs
saorsa-webrtc-core/: Cargo.toml
saorsa-webrtc-core/src/: call.rs  identity.rs  lib.rs  link_transport.rs  media.rs  protocol_handler.rs  quic_bridge.rs  quic_media_transport.rs  quic_streams.rs  service.rs  signaling.rs  transport.rs  types.rs
saorsa-webrtc-core/tests/: call_state_machine_tests.rs  integration_quic_loopback.rs  integration_tests.rs  quic_transport_tests.rs  rtp_bridge_tests.rs  signaling_validation_tests.rs  stream_multiplexing_tests.rs  track_backend_integration.rs
saorsa-webrtc-ffi/: Cargo.toml
saorsa-webrtc-ffi/src/: lib.rs  types.rs
saorsa-webrtc-kotlin/: README.md
saorsa-webrtc-swift/: README.md
saorsa-webrtc-tauri/: Cargo.toml  INTEGRATION_SUMMARY.md
saorsa-webrtc-tauri/src/: lib.rs
workspace-hack/: Cargo.toml
