[workspace]
resolver = "2"
members = [
    "saorsa-webrtc-core",
    "saorsa-webrtc-cli",
    "saorsa-webrtc-ffi",
    "saorsa-webrtc-tauri",
    "saorsa-webrtc-codecs",
    "workspace-hack",
]

[workspace.package]
version = "0.3.4"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>", "David Irvine <david@maidsafe.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/dirvine/saorsa-webrtc"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
bytes = "1.5"

# WebRTC
webrtc = "0.13"
ant-quic = { version = "0.21", default-features = false }

# Codecs
openh264 = "0.7"
opus = "0.3"

# CLI
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
