[package]
name = "saorsa-webrtc-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Saorsa WebRTC"

[[bin]]
name = "saorsa"
path = "src/main.rs"

[dependencies]
saorsa-webrtc-core = { version = "0.2.1", path = "../saorsa-webrtc-core" }
saorsa-webrtc-codecs = { version = "0.2.1", path = "../saorsa-webrtc-codecs" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
    serde_json.workspace = true

# CLI specific
clap = { version = "4.4", features = ["derive", "env"] }
crossterm = "0.27"
ratatui = "0.25"
viuer = "0.7"
directories = "5.0"
rand = "0.8"
