[package]
name = "saorsa-webrtc-codecs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Video and audio codecs for Saorsa WebRTC"
documentation = "https://docs.rs/saorsa-webrtc-codecs"

[dependencies]
# Video codecs
openh264 = { workspace = true, optional = true }
# Future: rave = { git = "https://github.com/oddity-ai/rave" }

# Audio codecs
opus = { workspace = true, optional = true }

# Common
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.4"

[features]
default = ["h264"]
h264 = ["openh264"]
opus = ["dep:opus"]
