[package]
name = "saorsa-webrtc-core"
version = "0.2.1"
edition = "2021"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>", "David Irvine <david@maidsafe.com>"]
license = "AGPL-3.0"
homepage = "https://github.com/dirvine/saorsa-webrtc"
repository = "https://github.com/dirvine/saorsa-webrtc"
description = "Core WebRTC implementation over ant-quic transport"

[features]
default = []
test-utils = []

[dependencies]
# Core async and serialization
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.21"
bincode = "1.3"

# Cryptography
saorsa-pqc = "0.3.12"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
blake3 = "1.5"
chacha20poly1305 = "0.10"

# Performance
parking_lot = "0.12"
once_cell = "1.19"

# Shared transport layer
saorsa-transport = { path = "../../saorsa-transport" }

# Networking - ant-quic as primary transport
ant-quic = { version = "0.10.3", features = ["pqc"] }

# WebRTC dependencies
webrtc = "0.13"
webrtc-ice = "0.13"
webrtc-media = "0.10"
webrtc-sctp = "0.12"
webrtc-srtp = "0.15"
webrtc-dtls = "0.12"
webrtc-data = "0.11"
interceptor = "0.14"
rtcp = "0.13"
rtp = "0.13"

# Codec support (new)
saorsa-webrtc-codecs = { version = "0.2.1", path = "../saorsa-webrtc-codecs" }

# Utilities
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
serial_test = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
rand = "0.8"
