[package]
name = "saorsa-webrtc-core"
version = "0.3.1"
edition = "2021"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>", "David Irvine <david@maidsafe.com>"]
license = "AGPL-3.0"
homepage = "https://github.com/dirvine/saorsa-webrtc"
repository = "https://github.com/dirvine/saorsa-webrtc"
description = "Core WebRTC implementation over ant-quic transport"

[features]
# QUIC-native transport (default) - uses ant-quic for all media
quic-native = []

# Legacy WebRTC support (optional) - includes traditional webrtc crate
# Allows fallback to ICE/DTLS/SRTP for compatibility
legacy-webrtc = [
    "webrtc",
    "webrtc-ice",
    "webrtc-media",
    "webrtc-sctp",
    "webrtc-srtp",
    "webrtc-dtls",
    "webrtc-data",
    "interceptor",
]

# Test utilities feature
test-utils = []

# Default features: Include legacy-webrtc support (for compatibility)
# Phase 2 will allow omitting legacy-webrtc when QuicMediaTransport is ready
default = ["quic-native", "legacy-webrtc"]

[dependencies]
# Core async and serialization
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.21"
postcard = { version = "1.1", features = ["use-std"] }

# Cryptography
saorsa-pqc = "0.3.12"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
blake3 = "1.5"
chacha20poly1305 = "0.10"

# Performance
parking_lot = "0.12"
once_cell = "1.19"

# Networking - ant-quic as primary transport (provides all transport types)
ant-quic = { version = "0.20", default-features = false }

# WebRTC dependencies (gated by legacy-webrtc feature, which is included by default)
# These are used for the legacy signaling path. In Phase 2, when QuicMediaTransport
# is fully implemented, these can be removed for QUIC-native-only builds.
webrtc = { version = "0.13", optional = true }
webrtc-ice = { version = "0.13", optional = true }
webrtc-media = { version = "0.10", optional = true }
webrtc-sctp = { version = "0.12", optional = true }
webrtc-srtp = { version = "0.15", optional = true }
webrtc-dtls = { version = "0.12", optional = true }
webrtc-data = { version = "0.11", optional = true }
interceptor = { version = "0.14", optional = true }

# RTP/RTCP packet parsing (always included - no transport dependency)
rtcp = "0.13"
rtp = "0.13"

# Codec support (new)
saorsa-webrtc-codecs = { version = "0.3.0", path = "../saorsa-webrtc-codecs" }

# Utilities
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
serial_test = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
rand = "0.8"
